<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_navigation"
    app:startDestination="@id/navigation_explore">

    <fragment
        android:id="@+id/navigation_explore"
        android:name="com.example.judetesmainmenuxml.ui.explore.ExploreFragment"
        android:label="@string/title_explore"
        tools:layout="@layout/fragment_explore" />
    <fragment
        android:id="@+id/navigation_cart"
        android:name="com.example.judetesmainmenuxml.ui.cart.CartFragment"
        android:label="@string/title_cart"
        tools:layout="@layout/fragment_cart" />
    <fragment
        android:id="@+id/navigation_favorite"
        android:name="com.example.judetesmainmenuxml.ui.liked.LikedFragment"
        android:label="@string/title_liked"
        tools:layout="@layout/fragment_liked" />
    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.judetesmainmenuxml.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>